# TikzAgent

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-run.sh  pyproject.toml  requirements.txt  run_demo.py  streamlit_demo.py
TikzAgent/: __init__.py  cli.py  example_usage.py  latex_tools.py  workflow.py
test/: test_latex.py
